--- a/approupas/approupas/pom.xml
+++ b/approupas/approupas/pom.xml
@@ -65,6 +65,12 @@
 			<artifactId>Dashboard</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>3.1.3</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
